# conan-examples

./: .clang-format.yml  .gitignore  README.md  conanfile.py
app/: conanfile.py  premake5.lua
conan_config/extensions/hooks/: hook_lint.py
conan_config/extensions/plugins/: cmd_wrapper.py
conan_config/profiles/: default  ios  linux-amd64  mingw  mingw.profile  mold  ssh  ubuntu22.04-gcc11  x86
conan_config/profiles/android/: .base  .ndk_base  native  native-r27c  shared  static  x86_64
conan_config/profiles/emsdk/: .base  README.md  asmjs  native  wasm64
consumer_cmake/: CMakeLists.txt  conanfile.py
consumer_cmake/src/: main.cpp
consumer_premake/: conanfile.py  premake5.lua
consumer_premake/src/: main.cpp  other.c
cpython/: README.md
cpython/test_bindings/native/: CMakeLists.txt  conanfile.py
cpython/test_bindings/native/bindings/: spam_bindings.cpp
cpython/test_bindings/native/include/: spam.h
cpython/test_bindings/native/src/: spam.cpp
cpython/test_bindings/native/test_package/: CMakeLists.txt  conanfile.py  test.py  test_package.cpp
cpython/test_bindings/pybind11/: conanfile.py
cpython/test_bindings/swig/: CMakeLists.txt  conanfile.py  test.i  test_package.c
cpython/test_interpreter/: CMakeLists.txt  conanfile.py  embedded_script.py  test_package.cpp
cpython/test_library_consumer/: CMakeLists.txt  conanfile.py  myscript.py
cpython/test_library_consumer/src/: mylib.cpp
cpython/test_library_consumer/test_package/: CMakeLists.txt  test_package.cpp
libs/: conanfile.py  premake5.lua
libs/math/src/: math.cpp
libs/utils/include/: string.hpp
libs/utils/src/: compression.cpp
premake/consumer_cmake/: CMakeLists.txt
premake/consumer_premake/: conanfile.py
premake/consumer_premake/src/: main.cpp
premake/libs/: conanfile.py  premake5.lua
premake/libs/math/include/: math.hpp
premake/libs/utils/include/: compression.h  quote.h
premake/libs/utils/src/: quote.cpp
qt-graphs/: CMakeLists.txt  README.md  conanfile.py  main.cpp  piegraph.cpp  piegraph.h  piewidget.cpp  piewidget.h
src/: conantoolchain-manual.premake5.lua  hello.cpp  premake5.lua
